--- a/src/scss/_shoelace.scss
+++ b/src/scss/_shoelace.scss
@@ -186,11 +186,10 @@ padding-top: 2px;
 
 // HOME ------------------------------
 .shop-now-btn::part(base) {
-  width: 6em;
-  height: 3em;
-
-  font-size: 15px;
-  text-align: center;
+  font-size: 0.6em;
+  width: 4em;
+  height: 1.5em;
+  margin-bottom: 5em;
 }
 
 // SHOP ------------------------------
