--- a/src/scss/_base.scss
+++ b/src/scss/_base.scss
@@ -1290,6 +1290,7 @@ tr.customer-order:hover {
 
   .social-media-box {
     padding-bottom: 0.2vw;
+    margin-bottom: -5vw;
 
     h1 {
       font-size: 20px;
