--- a/src/scss/_base.scss
+++ b/src/scss/_base.scss
@@ -163,6 +163,7 @@ a:hover {
 }
 
 .feature-txt-box-two {
+  display: block;
   margin-top: 15%;
   //margin-left: 50px;
   margin-bottom: 0;
@@ -170,19 +171,19 @@ a:hover {
 }
 
 .feature-txt-two {
-  max-width: 80%;
-  //height: 30%;
+  max-width: 100%;
+  padding: 1vw;
   margin: 0 auto;
 }
 
 .feature-img-two {
   width: 50%;
-    height: 50%;
+  height: 50%;
 }
 
 .feature-txt-three {
-  max-width: 90%;
-  //height: 30%;
+  max-width: 100%;
+  padding: 1vw;
   margin: 0 auto;
 }
 
