--- a/src/scss/_base.scss
+++ b/src/scss/_base.scss
@@ -76,7 +76,7 @@ a:hover {
 .slider {
   height: 44em;
   overflow: hidden;
-  margin-bottom: 2em;
+  margin-bottom: 4em;
   padding: 0;
 }
 
@@ -757,11 +757,11 @@ tr.customer-order:hover {
 
   // HOME -------------------------------------------------------------------------------------------------------
   .slider {
-    height: 34vh;
-    width: 112.5vw;
+    height: 26em;
+    width: 140vw;
     overflow: hidden;
-    margin-bottom: 2vw;
-    margin-left: -8vw;
+    margin-bottom: -6vw;
+    
   }
 
   .image-box {
@@ -989,9 +989,9 @@ tr.customer-order:hover {
   // HOME ---------------------------------------------------------------------------------------------------------------
   .slider {
     height: 38vh;
-    width: 113.5vw;
+    width: 120.5vw;
     overflow: hidden;
-    margin-bottom: 2vw;
+    margin-bottom: -3vw;
     margin-left: -9vw;
   }
 
